--- a/index.html
+++ b/index.html
@@ -16,8 +16,34 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="weather-app"></div>
+      <h1>New York</h1>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+            alt="Cloudy"
+          />
+          12°C |°F
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 2km/h</li>
+          </ul>
+        </div>
+      </div>
+      </div>
+      <small>
+        <a href="https://github.com/vikchvk/new-weather-app" target="_blank">
+          Open-source code</a
+        >, by Viktoriia Chvykova
+      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
