--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="src/style.css" />
+   
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
@@ -38,12 +39,13 @@
           </ul>
         </div>
       </div>
-      </div>
       <small>
         <a href="https://github.com/vikchvk/new-weather-app" target="_blank">
           Open-source code</a
-        >, by Viktoriia Chvykova
+        > by Viktoriia Chvykova
       </small>
+      </div>
+      
     </div>
     <script src="src/index.js"></script>
   </body>
