added the icons

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <div class="col-6">
           <div class="clearfix weather-temperature">
           <img
-            src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png"
+            src=""
             alt="Cloudy"
+            id="icon"
             class="float-left"
           />
           <div class="float-left">
