--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
     <div class="container">
       <div class="weather-app-wrapper"></div>
       <div class="weather-app"></div>
+      <form id="search-form" class="mb-3">
+        <div class="row">
+              <div class="col-9">
+        <input type="search"
+         placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+                </div>
+                 <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+                </div>
+      </form>
       <div class="overview"></div>
       <h1 id="city"></h1>
       <ul>
