--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
               <div class="col-9">
         <input type="search"
-         placeholder="Type a city.."
+         placeholder="Enter a city.."
                   class="form-control"
                   id="city-input"
                   autocomplete="off"
@@ -37,13 +37,15 @@
                   class="btn btn-primary w-100"
                 />
                 </div>
+                </div>
       </form>
       <div class="overview"></div>
       <h1 id="city"></h1>
       <ul>
-        <li>Last updated: <span id="date"></span></li>
+        <li><span id="date"></span></li>
         <li id="description"></li>
       </ul>
+    </div>
       <div class="row">
         <div class="col-6">
           <div class="clearfix weather-temperature">
