--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
           />
           <div class="float-left">
           <strong id="temperature"></strong>
-          <span class="units">°C | <a href="#"></a>°F</span>
+          <small class="units">
+         <a href="#"><span id="celsius-link" class="active">°C </span></a> | 
+                    <a href="#"><span id="fahrenheit-link">°F </span></a>
         </div>
+      </small>
         </div>
         </div>
         <div class="col-6">
@@ -69,6 +72,23 @@
           </ul>
         </div>
       </div>
+       <div class="weather-forecast" id ="forecast">
+         <div class="row">
+           <div class="col-2">
+             <div class="weather-forecast-date">
+            Sun
+            <br>
+             <img src="" alt="icon" width="45px"
+             />
+             <div class="weather-forecast-temperature">
+             <span class = "weather-forecast-temperature-max"> 20° </span> 
+             <span class = "weather-forecast-temperature-min"> 18° </span>
+             </div>
+           </div>
+           </div>
+         </div>
+         </div>
+        </div>
       <small>
         <a href="https://github.com/vikchvk/new-weather-app" target="_blank">
           Open-source code</a
