--- a/index.html
+++ b/index.html
@@ -4,88 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-   
+    <title>Vanilla Weather App</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/style.css" />
-   
-    <title>Vanilla Weather App</title>
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <div class="container col-6">
-      <div class="weather-app-wrapper">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <div class="container">
+      <div class="app-wrap">
         <div class="weather-app">
+          <form id="search-form" class="mb-3">
             <div class="row">
-              <div class="col-6">
-            <form id="search-form">
-              <input type="search" placeholder="Enter a city..." class="form-control" id ="city-input" autocomplete="off">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type a city.."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
               </div>
-              <div class="col-6">
-              <input type="submit" value="Search" class="btn btn-primary">
-              
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
             </div>
-            </form>
-            </div>
+          </form>
           <div class="overview">
-            <h1 id="city"></h1>
+            <h1 id="city">New York</h1>
             <ul>
-              <li><span id="date"></span></li>
-              <li id="description">Cloudy</li>
+              <li><span id="date">Friday</span></li>
+              <li id="description"></li>
             </ul>
           </div>
+
           <div class="row">
             <div class="col-6">
-              <div class="clearefix weather-temperature">
-                <div>
-                  <img
-                    src=""
-                    alt=""
-                    id="icon"
-                    class="float-left"
-                  />
-                  <strong id="temperature"></strong>
-                   <small class="units">
-                    <a href="#"><span id="celsius-link" class="active">°C </span></a> | 
-                    <a href="#"><span id="fahrenheit-link">°F </span></a>
-                </div></small>
+              <div class="clearfix weather-temp">
+                <img src="" alt="Clear" id="icon" class="float-left" />
+                <span class="temperature" id="temperature">18</span
+                ><span class="unit"
+                  ><a href="#" id="celcius-link" class="active">°C</a>|<a
+                    href="#"
+                    id="fahrenheit-link"
+                    >°F</a
+                  ></span
+                >
               </div>
             </div>
             <div class="col-6">
               <ul>
-                <li>Humidity: <span id="humidity"> </span>%</li>
-                <li>Wind: <span id="wind"> </span>km/h</li>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
               </ul>
             </div>
           </div>
-          <div class="weather-forecast" id ="forecast">
-         <div class="row">
-           <div class="col-2">
-             <div class="weather-forecast-date">
-            Sun
-            <br>
-             <img src="" alt="icon" width="45px"
-             />
-             <div class="weather-forecast-temperature">
-             <span class = "weather-forecast-temperature-max"> 20° </span> 
-             <span class = "weather-forecast-temperature-min"> 18° </span>
-             </div>
-           </div>
-           </div>
-         </div>
-         </div>
         </div>
-        
-      <small>
-        <a href="https://github.com/vikchvk/new-weather-app" target="_blank">
-          Open-source code</a
-        > by Viktoriia Chvykova
-      </small>
+        <small>
+          <a href="https://github.com/vikchvk/new-weather-app" target="_blank">
+            Open-source code</a
+          >
+          by Viktoriia Chvykova
+        </small>
       </div>
     </div>
     <script src="src/index.js"></script>
