--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <div class="container">
-      <div class="app-wrap">
+      <div class="weather-app-wrapper">
         <div class="weather-app">
           <form id="search-form" class="mb-3">
             <div class="row">
